Refatoração de Conhecimento para dentro de Atividade. Melhorias e limpezas nos scripts de inicialização.